# canopy

./: .gitignore  LOG  README
canopy-core/: CMakeLists.txt  Makefile
canopy-core/include/: canopy_engine.h
canopy-core/include/input/: input_codes.h  input_event.h
canopy-core/include/util/: primitives.h
canopy-core/src/: canopy_engine.cc  canopy_engine.h  input.cc  input_codes.h  input_event.h
canopy-core/src/input/: input.cc  input.h
canopy-core/src/renderer/: renderer.cc  renderer.h
canopy-core/src/settings/: settings.h
canopy-core/src/state/: game_state.cc  game_state.h
canopy-core/src/util/: primitives.h  utils.cc
canopy-mac/Canopy/: CanopyApp.swift  ContentView.swift  EventLogger.swift  EventMonitoringNSView.swift  EventMonitoringView.swift  InputEventLogger.swift  InputMonitoringNSView.swift  InputMonitoringView.swift  WindowEventMonitor.swift
canopy-mac/Canopy.xcodeproj/: project.pbxproj
canopy-mac/Canopy/src/: AppDelegate.swift  ContentView.swift
canopy-mac/Canopy/src/event/: InputMonitoringView.swift  WindowEventMonitor.swift
canopy-mac/Canopy/src/renderer/: MetalRenderer.swift  MetalView.swift
canopy-mac/CanopyTests/: CanopyTests.swift
canopy-mac/CanopyUITests/: CanopyUITests.swift  CanopyUITestsLaunchTests.swift
canopy-macos/Canopy/: CanopyApp.swift
canopy-macos/Canopy.xcodeproj/: project.pbxproj
canopy-macos/Canopy.xcodeproj/xcshareddata/xcschemes/: Canopy.xcscheme
canopy-macos/Canopy/src/: AppDelegate.swift  ContentView.swift
canopy-macos/Canopy/src/engine/: CanopyEngineBridge.h  (+2 more)
scripts/: update_engine.sh
(+14 files in other folders)
